[gd_scene format=3 uid="uid://bxi7j5jnyk5ks"]

[ext_resource type="Script" uid="uid://dkgxi4kc4akul" path="res://scripts/main.gd" id="1_2vj2h"]
[ext_resource type="PackedScene" uid="uid://063guml3dm7o" path="res://scenes/entities/player.tscn" id="1_72ix8"]
[ext_resource type="PackedScene" uid="uid://bfiqg428mw38e" path="res://scenes/entities/enemy.tscn" id="3_y0acb"]
[ext_resource type="PackedScene" uid="uid://bf2ommrewu17j" path="res://scenes/entities/ball.tscn" id="4_j4d2a"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_j4d2a"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_u81e1"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_b6bv0"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ubwgw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4d2a"]
size = Vector2(1162, 29)

[node name="Main" type="Node" unique_id=936922932]
script = ExtResource("1_2vj2h")

[node name="WorldBoundaries" type="StaticBody2D" parent="." unique_id=1679278053]

[node name="LeftBoundary" type="CollisionShape2D" parent="WorldBoundaries" unique_id=199526318]
position = Vector2(7.6293945e-06, 320)
scale = Vector2(1.0010451, 4.799999)
shape = SubResource("WorldBoundaryShape2D_j4d2a")
debug_color = Color(0.94624406, 0, 0.23408085, 0.41960785)

[node name="RightBoundary" type="CollisionShape2D" parent="WorldBoundaries" unique_id=504176136]
position = Vector2(1152, 320)
scale = Vector2(1, 4.680002)
shape = SubResource("WorldBoundaryShape2D_u81e1")
debug_color = Color(0.78354394, 0.0030748812, 0.35428748, 0.41960785)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBoundaries" unique_id=2003277033]
position = Vector2(576, 0)
shape = SubResource("WorldBoundaryShape2D_b6bv0")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WorldBoundaries" unique_id=1757586169]
position = Vector2(576, 640)
shape = SubResource("WorldBoundaryShape2D_ubwgw")

[node name="Player" parent="." unique_id=1064331733 instance=ExtResource("1_72ix8")]
position = Vector2(80, 592)
speed = 600

[node name="Enemy" parent="." unique_id=620884627 node_paths=PackedStringArray("ball") instance=ExtResource("3_y0acb")]
position = Vector2(80, 48)
speed = 600
ball = NodePath("../Ball")

[node name="Ball" parent="." unique_id=653229251 instance=ExtResource("4_j4d2a")]
position = Vector2(64, 88)
collision_layer = 3
collision_mask = 3
max_speed = 800.0

[node name="Timer" type="Timer" parent="." unique_id=1565887942]
one_shot = true
autostart = true

[node name="ScoreBorder" type="Node" parent="." unique_id=1046218323]

[node name="EnemyBorder" type="Area2D" parent="ScoreBorder" unique_id=2111969358]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreBorder/EnemyBorder" unique_id=358029793]
position = Vector2(571, 3)
shape = SubResource("RectangleShape2D_j4d2a")

[node name="PlayerBorder" type="Area2D" parent="ScoreBorder" unique_id=1388033302]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ScoreBorder/PlayerBorder" unique_id=1204410373]
position = Vector2(571, 638.5)
shape = SubResource("RectangleShape2D_j4d2a")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="ScoreBorder/EnemyBorder" to="." method="_on_enemy_border_body_entered"]
[connection signal="body_entered" from="ScoreBorder/PlayerBorder" to="." method="_on_player_border_body_entered"]
